#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([logger], [0.1], [support@commandus.com])
AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE([1.11 foreign no-define])

# libtool
LT_PREREQ([2.2])
LT_INIT([dlopen], [disable-static], [shared])
AC_ENABLE_SHARED

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([logger.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
